--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,6 +4,10 @@ EXAMPLES ?= rdkafka_example rdkafka_performance rdkafka_example_cpp \
 	producer consumer idempotent_producer transactions \
 	delete_records \
 	openssl_engine_example_cpp \
+	list_groups \
+	describe_groups \
+	list_group_offsets \
+	alter_group_offsets \
 	misc
 
 all: $(EXAMPLES)
@@ -57,6 +61,22 @@ transactions-older-broker.c: ../src/librdkafka.a transactions-older-broker.c
 		../src/librdkafka.a $(LIBS)
 
 delete_records: ../src/librdkafka.a delete_records.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+list_groups: ../src/librdkafka.a list_groups.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+describe_groups: ../src/librdkafka.a describe_groups.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+list_group_offsets: ../src/librdkafka.a list_group_offsets.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
+alter_group_offsets: ../src/librdkafka.a alter_group_offsets.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
 
